# bygonization

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
bygonizer/: Cargo.toml
bygonizer/src/: effect.rs  effects.rs  element.rs  element_types.rs  layer.rs  lib.rs  methods.rs  shape_types.rs  shapes.rs  util.rs
bygonizer/src/effect/: blur.rs  color_gap.rs  gap.rs  mask.rs  random_font.rs  smooth_move.rs
bygonizer/src/effects/: alpha.rs  blur.rs  movement.rs  pan.rs  scale.rs
bygonizer/src/element_types/: audio.rs  basictext.rs  image.rs  shape.rs  text.rs  video.rs
bygonizer/src/methods/: to_png.rs
bygonizer/src/shape_types/: circle.rs  square.rs
bygonizer/src/shapes/: square.rs
src/: main.rs
