[package]
name = "bygonizer"
version = "0.1.0"
edition = "2024"
authors = ["mimisheesharp/sharpedmimishee"]
repository = "https://github.com/sharpedmimishee/bygonization/"
license = "MIT"
description = "A backend system of Bygonization Video Editor."

[dependencies]
ab_glyph = "0.2.32"
image = "0.25.8"
imageproc = "0.25.0"
